[gd_scene load_steps=7 format=3 uid="uid://gblg1tbt23xt"]

[ext_resource type="Script" uid="uid://bt12siw1oxcdw" path="res://character_body.gd" id="1_4joeo"]
[ext_resource type="PackedScene" uid="uid://dxtyt340p0fld" path="res://x_bot.tscn" id="2_l2fv6"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vlble"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vlble"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4joeo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l2fv6"]
radius = 0.41888
height = 0.898706

[node name="CharacterBody" type="RigidBody3D" node_paths=PackedStringArray("xbot")]
collision_layer = 2147483648
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_4joeo")
xbot = NodePath("CharacterVisuals/X Bot")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_vlble")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.771603, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.190785, -2.5463)

[node name="CharacterVisuals" type="Node3D" parent="."]

[node name="BodyVisuals" type="MeshInstance3D" parent="CharacterVisuals"]
visible = false
mesh = SubResource("CapsuleMesh_vlble")
skeleton = NodePath("../..")

[node name="NoseVisuals" type="MeshInstance3D" parent="CharacterVisuals"]
transform = Transform3D(0.3, 0, 0, 0, -1.31134e-08, -0.3, 0, 0.3, -1.31134e-08, 0, 0.451, 0.602)
visible = false
mesh = SubResource("CapsuleMesh_4joeo")
skeleton = NodePath("../..")

[node name="X Bot" parent="CharacterVisuals" instance=ExtResource("2_l2fv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.958754, 0)

[node name="DashResetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DashAnimationTimer" type="Timer" parent="."]
wait_time = 0.34
one_shot = true

[node name="FloorDetectorArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloorDetectorArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.68975, 0)
shape = SubResource("CapsuleShape3D_l2fv6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DashResetTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashAnimationTimer" to="." method="_on_dash_animation_timer_timeout"]
[connection signal="body_entered" from="FloorDetectorArea3D" to="." method="_on_floor_detector_area_3d_body_entered"]
[connection signal="body_exited" from="FloorDetectorArea3D" to="." method="_on_floor_detector_area_3d_body_exited"]
